--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Todo List APP test has been edited</title>
+	<h1>this is new harding</h1>
         <style>
             body {
                 font-family: Arial, sans-serif;
