--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -2,7 +2,7 @@ i<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Todo List APP test has been edited</title>
-	<h1>this is new harding</h1>
+	<h1>this is new harding and it changes</h1>
         <style>
             body {
                 font-family: Arial, sans-serif;
